Moodle 3.11, Boost-based theme, Vimeo - Not visible, other rendering issues #47

--- a/styles.scss
+++ b/styles.scss
@@ -44,7 +44,9 @@ body:not(.distraction-free-mode) {
     #supervideo_area_embed {
         position: relative;
         z-index: 1;
-        width: 100%;
+        width: 100% !important;
+        padding-bottom: 56.25%;
+        overflow: hidden !important;
         .logo {
             position: absolute;
             height: 40px;
@@ -57,6 +59,10 @@ body:not(.distraction-free-mode) {
             width: 100%;
             height: 100%;
             position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border: none;
         }
     }
 }
